fix tile spacing

--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,8 @@ h1 {
   min-width: 240px;
   min-height: 190px;
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .resource-title {
